# TimesheetAPI

timesheet/: db.sqlite3  pyproject.toml
timesheet/backend/api/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
timesheet/backend/api/migrations/: 0001_initial.py
timesheet/backend/base/: admin.py  models.py  urls.py  views.py
timesheet/backend/base/migrations/: 0001_initial.py  0002_rename_data_fim_registroatividade_data_final_and_more.py  0003_registroatividade_setor_do_colaborador_and_more.py
timesheet/backend/home/: admin.py  grupo_usuario.py  models.py  urls.py  views.py
timesheet/backend/login/: acesso.py  apps.py  urls.py  views.py
timesheet/backend/login/static/acesso/css/: styles.css
timesheet/backend/setup/: asgi.py  settings.py  wsgi.py
timesheet/config/: manage.py
timesheet/core/: settings.py  urls.py
timesheet/frontend/static/base/: adicionar_atividade.css  minhas_atividades.css  modal.css  table.css
timesheet/frontend/static/login/css/: login.css
timesheet/frontend/static/partials/: NavAside.css
timesheet/frontend/templates/base/: home.html  minhas_atividades.html
timesheet/frontend/templates/home/: add.html  home.html  minhas_atividades.html
timesheet/frontend/templates/login/: login.html  sem_acesso.html
timesheet/frontend/templates/partials/: _aside.html  _header.html
timesheet/frontend/templates/theme/: base.html
